[gd_scene load_steps=4 format=3 uid="uid://b8pvwlfmfghud"]

[ext_resource type="PackedScene" uid="uid://danknk0tngaei" path="res://scenes/customer_info.tscn" id="1_8qg4y"]
[ext_resource type="Script" uid="uid://dc54a7ltcpkyt" path="res://scripts/customer.gd" id="2_xss0h"]
[ext_resource type="PackedScene" uid="uid://dov8ppblmkrii" path="res://scenes/character.tscn" id="3_rjbu2"]

[node name="Customer" type="Control"]
custom_minimum_size = Vector2(260, 260)
layout_mode = 3
anchors_preset = 0
offset_right = 260.0
offset_bottom = 260.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("2_xss0h")

[node name="CustomerInfo" parent="." instance=ExtResource("1_8qg4y")]
z_index = 10
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -225.0
offset_top = -416.0
offset_right = -25.0
offset_bottom = -165.99988
grow_horizontal = 2

[node name="CharacterAnimator" parent="." instance=ExtResource("3_rjbu2")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -130.0
offset_top = -255.0
offset_right = -130.0
offset_bottom = -255.0
grow_horizontal = 2
grow_vertical = 2

[node name="Highlight" type="ColorRect" parent="CharacterAnimator"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.42800003
anchor_top = 0.268
anchor_right = 0.68600005
anchor_bottom = 0.87500006
offset_left = -32.280006
offset_top = 6.3199997
offset_right = 16.623993
offset_bottom = 29.499985
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[connection signal="gui_input" from="CharacterAnimator/Highlight" to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="CharacterAnimator/Highlight" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CharacterAnimator/Highlight" to="." method="_on_mouse_exited"]
